welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:14: error: ';' expected but 'else' found.
		else if (x==getMondeLargeur()-1 && aig==0) {y=y+1
                ^